Updated the order of the code to reflect with presentation order

--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -199,6 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#End of Ryan's Code\n",
     "#Final Cleaned DataFrame\n",
     "crime_df = crime_df[[\"Neighborhood\",\"Crime\",\"Number of Cases\",\"Date\"]]\n",
     "crime_df1 = crime_df[[\"Neighborhood\",\"Crime\",\"Number of Cases\",\"Date\"]]\n",
@@ -209,10 +210,164 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "62971d4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Start of Ilia's Code\n",
+    "crime_df1[\"Date\"]=pd.to_datetime(crime_df1[\"Date\"], format=\"%m/%Y\")\n",
+    "crime_df1.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "469b0735",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_plt=crime_df1.groupby(\"Date\").sum()\n",
+    "df_plt.reset_index(inplace=True)\n",
+    "df_plt.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8836d8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crimes_before = crime_df1[(crime_df1[\"Date\"] >= \"2018-06-01\") & (crime_df1[\"Date\"] < \"2020-06-01\")]\n",
+    "\n",
+    "crimes_before"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "708eb60d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crimes_after=crime_df1[(crime_df1['Date']> \"2020-05-01\")]\n",
+    "\n",
+    "crimes_after"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bc956ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "before_df_plt=crimes_before.groupby(\"Date\").sum()\n",
+    "before_df_plt.reset_index(inplace=True)\n",
+    "before_df_plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c8697fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "After_df_plt=crimes_after.groupby(\"Date\").sum()\n",
+    "After_df_plt.reset_index(inplace=True)\n",
+    "After_df_plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a957cd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Total Crimes before George Floyd killing for 06/2018-06/2020 periods\n",
+    "before_df_plt.plot(kind='line', x='Date', y='Number of Cases')\n",
+    "\n",
+    "plt.title('Total Crimes before George Floyd killing - 06/2018-06/2020',fontsize =29)\n",
+    "\n",
+    "plt.xlabel('Date',fontsize =13)\n",
+    "plt.ylabel('Total Crimes',fontsize =14)\n",
+    "plt.rcParams[\"figure.figsize\"] = (20,8)\n",
+    "\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d153e753",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Total Crimes after George Floyd killing for 06/2020-06/2022 periods\n",
+    "After_df_plt.plot(kind='line', x='Date', y='Number of Cases')\n",
+    "\n",
+    "plt.title('Total Crimes after George Floyd killing - 06/2020-06/2022',fontsize =29)\n",
+    "\n",
+    "plt.xlabel('Date',fontsize =13)\n",
+    "plt.ylabel('Total Crimes',fontsize =14)\n",
+    "plt.rcParams[\"figure.figsize\"] = (20,8)\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "266e22a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Total Crimes combined for 06/2018-06/2022 periods\n",
+    "df_plt.plot(kind='line', x='Date', y='Number of Cases')\n",
+    "\n",
+    "plt.title('Total Crimes Combined before and after George Floyd killing - 06/2018-06/2022',fontsize =29)\n",
+    "\n",
+    "plt.xlabel('Date',fontsize =13)\n",
+    "plt.ylabel('Total Crimes',fontsize =14)\n",
+    "\n",
+    "# ax = df_plt.plot()\n",
+    "# df_plt.axvline(\"2020-06-01\", color=\"green\", linestyle=\"dashed\")\n",
+    "\n",
+    "plt.rcParams[\"figure.figsize\"] = (19,8)\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83a1a8e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_list_bf = before_df_plt[\"Number of Cases\"].tolist()\n",
+    "my_list_af = After_df_plt[\"Number of Cases\"].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa39a485",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#End of Ilia's Code\n",
+    "st.ttest_ind(my_list_af, my_list_bf, equal_var=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2822ec46",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Start of Ryan's Code\n",
     "#Crime Before Vs After\n",
     "crime_df.head(20)\n",
     "\n",
@@ -415,159 +570,6 @@
     "combined_property_df.plot.bar(ylabel=\"Number of Cases\")\n",
     "plt.savefig(\"Images/combined_property_crimes.jpeg\")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8bd0a58",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Ilia's code start\n",
-    "crime_df1[\"Date\"]=pd.to_datetime(crime_df1[\"Date\"], format=\"%m/%Y\")\n",
-    "crime_df1.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62ed773b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_plt=crime_df1.groupby(\"Date\").sum()\n",
-    "df_plt.reset_index(inplace=True)\n",
-    "df_plt.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32875c87",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "crimes_before = crime_df1[(crime_df1[\"Date\"] >= \"2018-06-01\") & (crime_df1[\"Date\"] < \"2020-06-01\")]\n",
-    "\n",
-    "crimes_before"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4c55b5a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "crimes_after=crime_df1[(crime_df1['Date']> \"2020-05-01\")]\n",
-    "\n",
-    "crimes_after"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34989856",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "before_df_plt=crimes_before.groupby(\"Date\").sum()\n",
-    "before_df_plt.reset_index(inplace=True)\n",
-    "before_df_plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be6e0210",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "After_df_plt=crimes_after.groupby(\"Date\").sum()\n",
-    "After_df_plt.reset_index(inplace=True)\n",
-    "After_df_plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0403f9b8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Total Crimes before George Floyd killing for 06/2018-06/2020 periods\n",
-    "before_df_plt.plot(kind='line', x='Date', y='Number of Cases')\n",
-    "\n",
-    "plt.title('Total Crimes before George Floyd killing - 06/2018-06/2020',fontsize =29)\n",
-    "\n",
-    "plt.xlabel('Date',fontsize =13)\n",
-    "plt.ylabel('Total Crimes',fontsize =14)\n",
-    "plt.rcParams[\"figure.figsize\"] = (20,8)\n",
-    "\n",
-    "plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a626967",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Total Crimes after George Floyd killing for 06/2020-06/2022 periods\n",
-    "After_df_plt.plot(kind='line', x='Date', y='Number of Cases')\n",
-    "\n",
-    "plt.title('Total Crimes after George Floyd killing - 06/2020-06/2022',fontsize =29)\n",
-    "\n",
-    "plt.xlabel('Date',fontsize =13)\n",
-    "plt.ylabel('Total Crimes',fontsize =14)\n",
-    "plt.rcParams[\"figure.figsize\"] = (20,8)\n",
-    "plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "721f2826",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Total Crimes combined for 06/2018-06/2022 periods\n",
-    "df_plt.plot(kind='line', x='Date', y='Number of Cases')\n",
-    "\n",
-    "plt.title('Total Crimes Combined before and after George Floyd killing - 06/2018-06/2022',fontsize =29)\n",
-    "\n",
-    "plt.xlabel('Date',fontsize =13)\n",
-    "plt.ylabel('Total Crimes',fontsize =14)\n",
-    "\n",
-    "# ax = df_plt.plot()\n",
-    "# df_plt.axvline(\"2020-06-01\", color=\"green\", linestyle=\"dashed\")\n",
-    "\n",
-    "plt.rcParams[\"figure.figsize\"] = (19,8)\n",
-    "plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b53d3732",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_list_bf = before_df_plt[\"Number of Cases\"].tolist()\n",
-    "my_list_af = After_df_plt[\"Number of Cases\"].tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c44eaca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#End of Ilia's Code\n",
-    "st.ttest_ind(my_list_af, my_list_bf, equal_var=False)"
    ]
   },
   {
