Our Final Draft For Presentation

--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "dbc57da1",
+   "metadata": {},
+   "source": [
+    "# Our Analysis of the Effect of The George Floyd Killing on Minneapolis Crime."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "46451507",
@@ -291,11 +299,13 @@
     "\n",
     "plt.title('Total Crimes before George Floyd killing - 06/2018-06/2020',fontsize =29)\n",
     "\n",
-    "plt.xlabel('Date',fontsize =13)\n",
-    "plt.ylabel('Total Crimes',fontsize =14)\n",
+    "plt.xlabel('Date',fontsize =18)\n",
+    "plt.ylabel('Total Crimes',fontsize =18)\n",
     "plt.rcParams[\"figure.figsize\"] = (20,8)\n",
-    "\n",
-    "plt.tight_layout()"
+    "plt.xticks(fontsize=18)\n",
+    "plt.yticks(fontsize=18)\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(\"Images/total_crime_before_george.png\")"
    ]
   },
   {
@@ -310,10 +320,13 @@
     "\n",
     "plt.title('Total Crimes after George Floyd killing - 06/2020-06/2022',fontsize =29)\n",
     "\n",
-    "plt.xlabel('Date',fontsize =13)\n",
-    "plt.ylabel('Total Crimes',fontsize =14)\n",
+    "plt.xlabel('Date',fontsize =18)\n",
+    "plt.ylabel('Total Crimes',fontsize =18)\n",
     "plt.rcParams[\"figure.figsize\"] = (20,8)\n",
-    "plt.tight_layout()"
+    "plt.xticks(fontsize=18)\n",
+    "plt.yticks(fontsize=18)\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(\"Images/total_crime_after_george.png\")"
    ]
   },
   {
@@ -323,41 +336,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#End of Ilia's Code\n",
     "# Total Crimes combined for 06/2018-06/2022 periods\n",
     "df_plt.plot(kind='line', x='Date', y='Number of Cases')\n",
     "\n",
     "plt.title('Total Crimes Combined before and after George Floyd killing - 06/2018-06/2022',fontsize =29)\n",
     "\n",
-    "plt.xlabel('Date',fontsize =13)\n",
-    "plt.ylabel('Total Crimes',fontsize =14)\n",
-    "\n",
+    "plt.xlabel('Date',fontsize =18)\n",
+    "plt.ylabel('Total Crimes',fontsize =18)\n",
+    "plt.xticks(fontsize=18)\n",
+    "plt.yticks(fontsize=18)\n",
     "# ax = df_plt.plot()\n",
     "# df_plt.axvline(\"2020-06-01\", color=\"green\", linestyle=\"dashed\")\n",
     "\n",
     "plt.rcParams[\"figure.figsize\"] = (19,8)\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "plt.savefig(\"Images/total_crime_combined_george.png\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83a1a8e5",
+   "cell_type": "markdown",
+   "id": "6eb58ea7",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "my_list_bf = before_df_plt[\"Number of Cases\"].tolist()\n",
-    "my_list_af = After_df_plt[\"Number of Cases\"].tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa39a485",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#End of Ilia's Code\n",
-    "st.ttest_ind(my_list_af, my_list_bf, equal_var=False)"
+    "# Ilia's Analysis \n",
+    "\n",
+    "### During a 2-year period before the George Floyd event, the total crime cases reflect ups and downs.  The crime cases  significantly increased after February 2019 and went down from July 2019. The crime cases remained relatively stable until the George Floyd event with the slight changes.\n",
+    "\n",
+    "### The crime noticeably increased for a few months after the George Floyd event, and it started to decline from August 2020 to February 2021. After February, it started to increase again, the same as it was shown before the George Floyd killing.\n",
+    "\n",
+    "### The line plot of total crimes combined before and after the George Floyd killing reflects a 4-year period, two years before and after the event. Based on the graph, the crime rates increased after the George Floyd killing but at the same time the trend remained the same. The crime rate tends to increase during Spring and Summer, and starts to decrease in Fall and Winter. The George Floyd killing did not reflect a significant impact on the total crime in Minneapolis. However, some of the neighborhoods in Minneapolis were negatively impacted, which is detailed in the analysis below."
    ]
   },
   {
@@ -371,6 +379,8 @@
     "#Crime Before Vs After\n",
     "crime_df.head(20)\n",
     "\n",
+    "crime_df.to_csv(\"Resources/crime.csv\")\n",
+    "crime_df1.to_csv(\"Resources/crime1.csv\")\n",
     "gf_df = crime_df.loc[\"4/2020\":\"6/2020\",:]\n",
     "gf_df.to_csv(\"Resources/george_floyd.csv\")\n",
     "before_df = crime_df.loc[\"5/2018\":\"5/2020\",:]\n",
@@ -386,6 +396,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Start of Ryan's Code\n",
     "#Before Violent DataFrame\n",
     "before_violent_df = before_df[before_df[\"Crime\"]!=\"Arson\"]\n",
     "before_violent_df = before_violent_df[before_violent_df[\"Crime\"]!=\"Auto Theft\"]\n",
@@ -573,6 +584,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "59dc4070",
+   "metadata": {},
+   "source": [
+    "# Ryan's Analysis\n",
+    "\n",
+    "### Based off of the data for 2 years before and 2 years after the George Floyd event, you can see that violent crimes rates rose (excluding rape) and that property crime rates of arson and theft rose but burglary and larceny fell.\n",
+    "\n",
+    "### Before the George Floyd event there were a total of  46,108 crimes reported in the previous 2 years but after there were 50,318 crimes reported which is roughly a 9% increase.\n",
+    "\n",
+    "### Violent crimes before the George Floyd event totaled 7,558 while after they totaled 10,304 cases. This tracks to roughly a 36% increase in violent crimes.\n",
+    "\n",
+    "### Violent crimes before the George Floyd event totaled 7,558 while after they totaled 10,304 cases. This tracks to roughly a 36% increase in violent crimes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b9fbf52c",
@@ -612,6 +639,7 @@
     "plt.title(\"Overall crime Incidents occurred before George Floyd killing from 06/2018-05/2020\", fontsize=15, loc=\"center\")\n",
     "plt.figure(figsize=(4,6))\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"Images/pie_before.jpeg\")\n",
     "plt.show()"
    ]
   },
@@ -631,7 +659,26 @@
     "plt.title(\"Overall crime Incidents occurred after George Floyd killing from 06/2020-06/2022\", loc=\"center\", fontsize=15)\n",
     "plt.figure(figsize=(6,6))\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"Images/pie_after.jpeg\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b77ee7f9",
+   "metadata": {},
+   "source": [
+    "# Loukya's Analysis\n",
+    "\n",
+    "### We can say that before the incident Larceny accounts for almost 55.6% of the total crime whereas it is reduced to 48.7% after the incident.\n",
+    "\n",
+    "### There is an increase in Auto Theft and Robbery after the incident from 12.8% to 17.8% and   from 5.7% to 8.5% respectively.\n",
+    "\n",
+    "### Crimes like Homicide and Arson also increased by little percentage.\n",
+    "\n",
+    "### Crime rate of Burglary and Rape reduced after the incident.\n",
+    "\n",
+    "### Aggravated assault also increased after the incident."
    ]
   },
   {
@@ -1274,6 +1321,55 @@
     "# T-test for all crime before and after GF\n",
     "\n",
     "st.ttest_ind(b_all, a_all, equal_var=False) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83a1a8e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Ilia's TTest variables\n",
+    "my_list_bf = before_df_plt[\"Number of Cases\"].tolist()\n",
+    "my_list_af = After_df_plt[\"Number of Cases\"].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa39a485",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Ilia's TTest\n",
+    "st.ttest_ind(my_list_af, my_list_bf, equal_var=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24820e3c",
+   "metadata": {},
+   "source": [
+    "# William's Analysis\n",
+    "\n",
+    "### Minneapolis has 87 officially recognized neighborhoods. 87 ticks on a plot seemed too unwieldy, so I searched for a way to group them.\n",
+    "\n",
+    "### Upon examining our dataset, we discovered that some neighborhoods around the former “Lake Calhoun” also changed their names. Once we did some detective work on these name changes, we were able to tidy the dataset and arrive at the same number of data points per neighborhood. \n",
+    "\n",
+    "### It turns out that there are 11 officially recognized neighborhood “communities” which are conglomerate groups of individual neighborhoods, so I chose to arrange the data by these 11.  (https://en.wikipedia.org/wiki/Neighborhoods_of_Minneapolis)\n",
+    "\n",
+    "### Our dataset was ordered by date, neighborhood, and type of crime. There were 8 types of crimes, with 4 being property crimes and 4 being violent crimes.\n",
+    "\n",
+    "### Property crime categories = Arson, Auto Theft, Burglary,  Larceny \n",
+    "(https://ucr.fbi.gov/crime-in-the-u.s/2016/crime-in-the-u.s.-2016/topic-pages/property-crime)\n",
+    "\n",
+    "### Violent crime categories = Aggravated Assault, Homicide, Rape, Robbery\n",
+    "(https://ucr.fbi.gov/crime-in-the-u.s/2016/crime-in-the-u.s.-2016/topic-pages/violent-crime)\n",
+    "\n",
+    "### In order to understand any relationship between the George Floyd killing and crime in Minneapolis, I thought it prudent to examine crime data for the month before the killing and the month after the killing (George Floyd was killed on 5/25/2020, so we used 6/1/2020 as our midpoint.  We considered all of 5/2020 as 1 month before, and all of 6/2020 data as 1 month after.) \n",
+    "\n",
+    "### I looked at changes in numbers of property and violent crimes by neighborhood community, then also calculated % change for this time period."
    ]
   }
  ],
