The updates never end, they go on and on my friends

--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -594,8 +594,6 @@
     "\n",
     "### Before the George Floyd event there were a total of  46,108 crimes reported in the previous 2 years but after there were 50,318 crimes reported which is roughly a 9% increase.\n",
     "\n",
-    "### Violent crimes before the George Floyd event totaled 7,558 while after they totaled 10,304 cases. This tracks to roughly a 36% increase in violent crimes.\n",
-    "\n",
     "### Violent crimes before the George Floyd event totaled 7,558 while after they totaled 10,304 cases. This tracks to roughly a 36% increase in violent crimes."
    ]
   },
@@ -639,7 +637,7 @@
     "plt.title(\"Overall crime Incidents occurred before George Floyd killing from 06/2018-05/2020\", fontsize=15, loc=\"center\")\n",
     "plt.figure(figsize=(4,6))\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"Images/pie_before.jpeg\")\n",
+    "#plt.savefig(\"Images/pie_before.jpeg\")\n",
     "plt.show()"
    ]
   },
@@ -659,7 +657,7 @@
     "plt.title(\"Overall crime Incidents occurred after George Floyd killing from 06/2020-06/2022\", loc=\"center\", fontsize=15)\n",
     "plt.figure(figsize=(6,6))\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"Images/pie_after.jpeg\")\n",
+    "#plt.savefig(\"Images/pie_after.jpeg\")\n",
     "plt.show()"
    ]
   },
@@ -1289,6 +1287,80 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7511d4a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# WILLIAM'S YEAR OVER YEAR ANALYSIS OF MAYS AND JUNES\n",
+    "\n",
+    "# MAYS Y-over-Y\n",
+    "\n",
+    "MAYS_LIST = []\n",
+    "\n",
+    "MAYS_2018 = df[ (df[\"reportMonth\"]==5) & (df[\"reportYear\"]==2018) ]\n",
+    "MAYS_2019 = df[ (df[\"reportMonth\"]==5) & (df[\"reportYear\"]==2019) ]\n",
+    "MAYS_2020 = df[ (df[\"reportMonth\"]==5) & (df[\"reportYear\"]==2020) ]\n",
+    "MAYS_2021 = df[ (df[\"reportMonth\"]==5) & (df[\"reportYear\"]==2021) ]\n",
+    "MAYS_2022 = df[ (df[\"reportMonth\"]==5) & (df[\"reportYear\"]==2022) ]\n",
+    "\n",
+    "\n",
+    "MAYS_LIST.append(MAYS_2018[\"number\"].sum())\n",
+    "MAYS_LIST.append(MAYS_2019[\"number\"].sum())\n",
+    "MAYS_LIST.append(MAYS_2020[\"number\"].sum())\n",
+    "MAYS_LIST.append(MAYS_2021[\"number\"].sum())\n",
+    "MAYS_LIST.append(MAYS_2022[\"number\"].sum())\n",
+    "\n",
+    "# JUNES Y-over-Y\n",
+    "\n",
+    "JUNES_LIST = []\n",
+    "\n",
+    "JUNES_2018 = df[ (df[\"reportMonth\"]==6) & (df[\"reportYear\"]==2018) ]\n",
+    "JUNES_2019 = df[ (df[\"reportMonth\"]==6) & (df[\"reportYear\"]==2019) ]\n",
+    "JUNES_2020 = df[ (df[\"reportMonth\"]==6) & (df[\"reportYear\"]==2020) ]\n",
+    "JUNES_2021 = df[ (df[\"reportMonth\"]==6) & (df[\"reportYear\"]==2021) ]\n",
+    "JUNES_2022 = df[ (df[\"reportMonth\"]==6) & (df[\"reportYear\"]==2022) ]\n",
+    "\n",
+    "JUNES_LIST.append(JUNES_2018[\"number\"].sum())\n",
+    "JUNES_LIST.append(JUNES_2019[\"number\"].sum())\n",
+    "JUNES_LIST.append(JUNES_2020[\"number\"].sum())\n",
+    "JUNES_LIST.append(JUNES_2021[\"number\"].sum())\n",
+    "JUNES_LIST.append(JUNES_2022[\"number\"].sum())\n",
+    "\n",
+    "MAYS_LIST\n",
+    "JUNES_LIST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e1d58a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAYS_df = pd.DataFrame({'MAYS':['May 2018', 'May 2019', 'May 2020', 'May 2021', \"Mays 2022\"], 'Number_Crimes':MAYS_LIST})\n",
+    "\n",
+    "MAYS_df.plot.bar(x='MAYS', y='Number_Crimes', rot=0, color=\"blue\")\n",
+    "plt.grid()\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a80e26c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "JUNES_df = pd.DataFrame({'JUNES':['June 2018', 'June 2019', 'June 2020', 'June 2021', \"Junes 2022\"], 'Number_Crimes':JUNES_LIST})\n",
+    "\n",
+    "JUNES_df.plot.bar(x='JUNES', y='Number_Crimes', rot=0, color=\"orange\")\n",
+    "plt.grid()\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2ed71366",
    "metadata": {},
    "outputs": [],
@@ -1344,6 +1416,26 @@
    "source": [
     "#Ilia's TTest\n",
     "st.ttest_ind(my_list_af, my_list_bf, equal_var=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32706b8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "st.ttest_ind(before_violent_cases_list,after_violent_cases_list, equal_var=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67bafadc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "st.ttest_ind(before_property_cases_list,after_property_cases_list, equal_var=False)"
    ]
   },
   {
