--- a/WILLIAM_FINAL_LAST.ipynb
+++ b/WILLIAM_FINAL_LAST.ipynb
@@ -681,6 +681,129 @@
     "\n",
     "st.ttest_ind(b_all, a_all, equal_var=False) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9159c22",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4f92e4f",
+   "metadata": {},
+   "source": [
+    "<!-- this README template used with permission from: https://github.com/navendu-pottekkat/awesome-readme/blob/master/README-template.md -->\n",
+    "\n",
+    "# The Effect of the George Floyd Killing on Crime in Minneapolis\n",
+    "\n",
+    "<!-- Introduce research team here -->\n",
+    "\n",
+    "\n",
+    "### Research Team: *Ilia, Loukya, Ryan, William* (Group 8)\n",
+    "\n",
+    "<!-- Executive Summary -->\n",
+    "\n",
+    "## Executive Summary\n",
+    "\n",
+    "*The Project's Conception* \n",
+    "\n",
+    "\n",
+    "Our plan was to obtain and analyze City of Minneapolis crime data to determine whether the George Floyd killing on May 25, 2020 affected crime in the city. We easily discovered a relatively tidy dataset in .csv file format from the City of Minneapolis itself, published online as part of the city's \"Open Data Minneapolis\" (https://opendata.minneapolismn.gov/) initiative. The dataset provided crime data from 2017 to the present, arranged by neighborhood and type of crime. \n",
+    "\n",
+    "*Our Research Questions*\n",
+    "\n",
+    "\n",
+    "Each member of the research team developed a research question to help us frame our inquiry: \n",
+    "\n",
+    "- Did the distribution of crimes change after the George Floyd killing? LOUKYA\n",
+    "\n",
+    "- Did the violent crime rate change after the George Floyd killing? RYAN\n",
+    "\n",
+    "- Did the property crime rate change after the George Floyd killing? ILIA\n",
+    "\n",
+    "- Which neighborhoods experienced the greatest increases in crime after the George Floyd killing? WILLIAM\n",
+    "\n",
+    "*Our Hypothesis*\n",
+    "\n",
+    "\n",
+    "As we explored the dataset to begin to answer these research questions, we developed the following hypothesis for testing purposes:\n",
+    "\n",
+    "\"Crime worsened in Minneapolis after the George Floyd killing.\"\n",
+    "\n",
+    "The *null hypothesis* thus became:\n",
+    "\n",
+    "\"The George Floyd killing had no effect on crime in Minneapolis.\"\n",
+    "\n",
+    "*Our Strategy*\n",
+    "\n",
+    "\n",
+    "Our strategy was three-fold: \n",
+    "\n",
+    "**(1) Examine the crime data with a \"wide\" lens** \n",
+    "\n",
+    "We looked at 2 years worth of data *before* the George Floyd killing and 2 years *after* the George Floyd killing. Wrangling the dataset, we were able to visualize crime rate trend lines and the distribution and aggregation of 8 particular types of crime.  When it was possible to do so, we rendered separate visualizations for property crime, violent crime, and overall crime.        \n",
+    "\n",
+    "**(2) Examine the crime data with a \"narrow\" lens** \n",
+    "\n",
+    "We looked at 1 month worth of data *before* the George Floyd killing and 1 month *after* the George Floyd killing, and added year-over-year comparisons of these months to see what \"typical\" May and June crime data in Minneapolis looked like. Our visualizations for this narrow time period also represent property crime, violent crime, and overall crime.  They focus in on numerical difference and percent change by neighborhood community.   \n",
+    "\n",
+    "**(3) Run student t-tests on our dataset to attempt to reject the *Null Hypothesis***\n",
+    "\n",
+    "Since we wanted to compare \"before George Floyd\" and \"after George Floyd\" for both the \"wide\" and \"narrow\" crime datasets, we chose the independence \"Student's t-test\" (comparing the means of one population with the mean of another). \n",
+    "\n",
+    "6 t-tests were conducted in total: \n",
+    "\n",
+    "1. first\n",
+    "2. second\n",
+    "3. third\n",
+    "4. fourth\n",
+    "5. fifth\n",
+    "6. sixth\n",
+    "\n",
+    "*Principal Findings*\n",
+    "\n",
+    "\n",
+    "Our t-test results showed that we are unable to reject the *null hypothesis*, as each p-value did not meet the p-value < 0.05 threshold. Thus, our analysis must conclude that we have not discovered any statistically significant relationship between the George Floyd killing and crime in Minneapolis. \n",
+    "\n",
+    "Nevertheless, we were able to answer our research questions to our satisfaction. \n",
+    "\n",
+    "- Did the distribution of crimes change after the George Floyd killing? \n",
+    "\n",
+    "    (Loukya's answer & relevant plots)\n",
+    "\n",
+    "- Did the violent crime rate change after the George Floyd killing? \n",
+    "\n",
+    "    (Ryan's answer & relevant plots)\n",
+    "\n",
+    "- Did the property crime rate change after the George Floyd killing?\n",
+    "\n",
+    "    (Ilia's answer & relevant plots)\n",
+    "\n",
+    "- Which neighborhoods experienced the greatest increases in crime after the George Floyd killing?\n",
+    "\n",
+    "    (William's answer & relevant plots)\n",
+    "\n",
+    "\n",
+    "*Take-aways*\n",
+    "\n",
+    "While we were able to answer our research questions, the research team was surprised with the t-test results. Although we were unable to reject the null hypothesis, the data show alarming upticks in some categories of crime across certain neighborhoods of Minneapolis. Moreover, our line plots clearly show that crime in Minneapolis fluctuates seasonally to a large degree. Further analysis should be conducted to guide Minneapolis policy-makers in their pursuit of crime-reducing measures. \n",
+    "\n",
+    "\n",
+    "## Dataset \n",
+    "\n",
+    "(Info on the dataset, url, etc.)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de6db760",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
